# sich

./: .editorconfig  .pre-commit-config.yaml  pyproject.toml
scripts/: extract_dataset.py
sich/: dataset.py  transform.py  utils.py
sich/smp/: __main__.py
